--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@
 
 button {
   height: 60px;
-  font-size: 2rem !important;
+  font-size: 32px !important;
   background: rgba(255, 255, 255, 0.1) !important;
   border-radius: 16px !important;
   /* backdrop-filter: blur(4px); */
